--- a/frontend/src/_globals.scss
+++ b/frontend/src/_globals.scss
@@ -7,7 +7,7 @@
   font-family: "Muli", sans-serif;
 }
 
-$backgroundImage: url('/images/background.png');
+$backgroundImage: url('./images/canvasskribblback.png');
 $backgroundColor: #282b34;
 $redColor: #ff1e56;
 $yellowColor: #ffac41;
