--- a/frontend/src/game/chat/chat.scss
+++ b/frontend/src/game/chat/chat.scss
@@ -33,7 +33,7 @@
   justify-content: space-between;
   height: 600px;
   flex-direction: column;
-  background-image: url('../../images/background_chat.jpeg');
+  background-image: url('../../images/skribbl_chat.jpeg');
   background-size: 100px;
   .user-name {
     width: 100%;
