--- a/frontend/src/game/game.scss
+++ b/frontend/src/game/game.scss
@@ -1,4 +1,4 @@
-@import "../globals";
+/*@import "../globals";
 .Game {
   width: 100%;
   height: 100vh;
@@ -42,4 +42,4 @@
       cursor: pointer;
     }
   }
-}
+}*/
